# preSLAM

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/: pose.hpp
lib/: CMakeLists.txt
notes/: note.typ
src/: a0_solveMatrix.cpp
src/a0_solveMatrix/: main.cpp  mid-solvers.cpp  mid-solvers.hpp
src/a1_pointDistance/: modern.cpp  note.md  traditional.cpp
src/a2_poseTimeInterpolation/: modern.cpp  note.md  traditional.cpp
src/a3_a2-PLUS/: modern.cpp  note.md  traditional.cpp
src/a4_parallelization/: modern.cpp  note.md  traditional.cpp
